--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,7 @@
-FROM python:3.11-slim as builder
+FROM python:3.11-slim AS builder
+
+# Налаштування дзеркала PyPI
+RUN pip config set global.index-url https://pypi.douban.com/simple
 
 # Встановлення системних залежностей
 RUN apt-get update && apt-get install -y \
@@ -7,18 +10,18 @@ RUN apt-get update && apt-get install -y \
     libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# Встановлення Poetry
-RUN pip install poetry
+# Встановлення Poetry зі збільшеним таймаутом
+RUN pip install --default-timeout=1000 poetry
 
 # Копіювання файлів залежностей
 WORKDIR /app
-COPY pyproject.toml poetry.lock ./
+COPY pyproject.toml poetry.lock* ./
 
-# Встановлення залежностей
+# Встановлення залежностей зі збільшеним таймаутом
 RUN poetry config virtualenvs.create false \
-    && poetry install --no-dev --no-interaction --no-ansi
+    && poetry install --no-root --no-interaction --no-ansi
 
-# Production stage
+# Development stage
 FROM python:3.11-slim
 
 # Встановлення тільки runtime залежностей
@@ -27,28 +30,9 @@ RUN apt-get update && apt-get install -y \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Копіювання залежностей з builder
-COPY --from=builder /usr/local/lib/python3.11/site-packages /usr/local/lib/python3.11/site-packages
-COPY --from=builder /usr/local/bin /usr/local/bin
-
-# Копіювання джерельного коду
+# Копіювання коду
 WORKDIR /app
-COPY . .
+COPY --from=builder /app /app
 
-# Створення непривілейованого користувача
-RUN useradd --create-home --shell /bin/bash app \
-    && chown -R app:app /app \
-    && mkdir -p /app/logs \
-    && chown -R app:app /app/logs
-
-USER app
-
-# Відкриття порту
-EXPOSE 8000
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD curl -f http://localhost:8000/health || exit 1
-
-# Запуск додатку
-CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "4"]
+# Запуск додатку з перезавантаженням
+CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
