--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,4 +1,4 @@
-FROM python:3.11-slim
+FROM python:3.11-slim AS builder
 
 # Встановлення системних залежностей
 RUN apt-get update && apt-get install -y \
@@ -8,37 +8,35 @@ RUN apt-get update && apt-get install -y \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Створення користувача
-RUN useradd --create-home --shell /bin/bash app
-
-# Робоча директорія
-WORKDIR /app
+# Встановлення Poetry
+RUN pip install poetry
 
 # Копіювання файлів залежностей
+WORKDIR /app
 COPY pyproject.toml poetry.lock* ./
-
-# Встановлення Poetry
-RUN pip install --no-cache-dir poetry
 
 # Встановлення залежностей
 RUN poetry config virtualenvs.create false \
-    && poetry install --no-dev --no-interaction --no-ansi
+    && poetry install --no-root --no-interaction --no-ansi
 
-# Копіювання джерельного коду
-COPY . .
+# Development stage
+FROM python:3.11-slim
 
-# Зміна власника
-RUN chown -R app:app /app
+# Встановлення тільки runtime залежностей
+RUN apt-get update && apt-get install -y \
+    libpq5 \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
 
-# Перехід до непривілейованого користувача
-USER app
+# Копіювання коду
+WORKDIR /app
+COPY --from=builder /app /app
 
-# Відкриття порту
-EXPOSE 8000
+# Переконайтеся, що виконувані файли доступні
+RUN ls -la /app/
+RUN which python
+RUN which pip
+RUN pip list | grep celery
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8000/health || exit 1
-
-# Команда запуску для development
+# Запуск додатку з перезавантаженням
 CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
