--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,31 +6,54 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = "^0.104.1"
-uvicorn = {extras = ["standard"], version = "^0.24.0"}
-pydantic = "^2.5.0"
-pydantic-settings = "^2.1.0"
-sqlalchemy = "^2.0.23"
-alembic = "^1.12.1"
-psycopg2-binary = "^2.9.9"
-python-jose = {extras = ["cryptography"], version = "^3.3.0"}
-passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+fastapi = "^0.115"
+uvicorn = { extras = ["standard"], version = "^0.32" }
+sqlmodel = "^0.0.22"
+alembic = "^1.14"
+asyncpg = "^0.30"
+psycopg2-binary = "^2.9"
+redis = "^5.2"
+python-jose = "^3.3"
+passlib = "^1.7"
+bcrypt = "^4.0"
 python-multipart = "^0.0.6"
-redis = "^5.0.1"
-minio = "^7.2.0"
-email-validator = "^2.1.0"
-python-dotenv = "^1.0.0"
-structlog = "^23.2.0"
-prometheus-client = "^0.19.0"
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^7.4.3"
-pytest-asyncio = "^0.21.1"
-httpx = "^0.25.2"
-black = "^23.11.0"
-flake8 = "^6.1.0"
-mypy = "^1.7.1"
-pre-commit = "^3.5.0"
+minio = "^7.2"
+celery = "^5.3"
+structlog = "^23.3"
+prometheus-client = "^0.19"
+httpx = "^0.25"
+pytest = "^7.4"
+pytest-asyncio = "^0.21"
+flake8 = "^6.1"
+black = "^23.12"
+mypy = "^1.7"
+pre-commit = "^3.8"
+python-dotenv = "^1.1"
+pydantic = "^2.11"
+pydantic-settings = "^2.11"
+email-validator = "^2.3"
+requests = "^2.31"
+urllib3 = "^2.0"
+cryptography = "^41.0"
+iniconfig = "^2.1"
+packaging = "^23.2"
+pluggy = "^1.3"
+py = "^1.11"
+tomli = "^2.0"
+typing-extensions = "^4.8"
+click = "^8.1"
+colorama = "^0.4"
+exceptiongroup = "^1.1"
+h11 = "^0.14"
+idna = "^3.4"
+pyasn1 = "^0.5"
+rsa = "^4.9"
+pydantic-core = "^2.14"
+sniffio = "^1.3"
+anyio = "^3.7"
+httpcore = "^0.17"
+certifi = "^2023.7"
+charset-normalizer = "^3.3"
 
 [build-system]
 requires = ["poetry-core"]
