--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,6 +1,5 @@
-# frontend/Dockerfile.dev
 # Stage 1: Build the React application
-FROM node:18-alpine as build-stage
+FROM node:18-alpine AS build-stage
 
 WORKDIR /app
 
@@ -8,7 +7,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Встановлюємо залежності
-RUN npm ci --only=production --prefer-offline
+RUN npm install --prefer-offline
 
 # Копіюємо решту файлів проекту
 COPY . .
@@ -17,7 +16,7 @@ COPY . .
 RUN npm run build
 
 # Stage 2: Serve the application with Nginx
-FROM nginx:stable-alpine as production-stage
+FROM nginx:stable-alpine AS production-stage
 
 # Копіюємо ПОБУДОВАНІ файли з build-stage
 COPY --from=build-stage /app/dist /usr/share/nginx/html
@@ -28,5 +27,5 @@ COPY nginx.conf /etc/nginx/conf.d/default.conf
 # Відкриваємо порт, на якому NGINX слухає (відповідно до nginx.conf)
 EXPOSE 80
 
-# Запуск додатку
+# Запускаємо Nginx
 CMD ["nginx", "-g", "daemon off;"]
