--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -22,6 +22,6 @@ server {
     # Health check
     location /health {
         access_log off;
-        return 200 "healthy\n";
+        return 200 "healthy";
     }
 }
