--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,9 +1,9 @@
 version: 2
-updates:
-  - package-ecosystem: "pip"
-    directory: "/backend"
-    schedule:
-      interval: "weekly"
+# updates:
+#   - package-ecosystem: "pip"
+#     directory: "/backend"
+#     schedule:
+#       interval: "weekly"
       day: "monday"
     open-pull-requests-limit: 10
 
