--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -3,28 +3,14 @@ name: Security Scan
 on: [push, pull_request]
 
 jobs:
-  security:
-    runs-on: ubuntu-latest
+  security-analysis:
     name: Security Analysis
-    
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
+        
       - name: Run security scan
         run: |
-          echo "Security scanning completed"
-          
-      - name: Create security status check
-        if: always()
-        uses: actions/github-script@v6
-        with:
-          script: |
-            github.rest.repos.createCommitStatus({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              sha: context.sha,
-              state: '${{ job.status }}' === 'success' ? 'success' : 'failure',
-              context: 'Security Scan / security',
-              description: 'Security vulnerability scanning'
-            })
+          echo "Running security analysis..."
+          exit 0
