--- a/.github/workflows/status-checks.yml
+++ b/.github/workflows/status-checks.yml
@@ -1,116 +1,23 @@
-name: Required Status Checks
+cat > .github/workflows/codeql.yml << 'EOF'
+name: CodeQL
 
-on:
-  pull_request:
-    types: [opened, synchronize, reopened]
-  push:
-    branches: [master]
+on: [push, pull_request]
 
 jobs:
-  # Тестовий статус-чек
-  test-check:
-    name: Test Suite
+  analyze:
+    name: CodeQL Analysis
     runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
     steps:
-      - name: Create pending status
-        uses: actions/github-script@v6
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
         with:
-          script: |
-            github.rest.repos.createCommitStatus({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              sha: context.sha,
-              state: 'pending',
-              context: 'Test Suite',
-              description: 'Running test suite...'
-            })
-      
-      - name: Run tests
-        run: |
-          echo "Running test suite..."
-          sleep 5
-          
-      - name: Update status to success
-        uses: actions/github-script@v6
-        with:
-          script: |
-            github.rest.repos.createCommitStatus({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              sha: context.sha,
-              state: 'success',
-              context: 'Test Suite',
-              description: 'All tests passed'
-            })
-
-  # Лінтінг статус-чек
-  lint-check:
-    name: Code Quality
-    runs-on: ubuntu-latest
-    steps:
-      - name: Create pending status
-        uses: actions/github-script@v6
-        with:
-          script: |
-            github.rest.repos.createCommitStatus({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              sha: context.sha,
-              state: 'pending',
-              context: 'Code Quality',
-              description: 'Running code quality checks...'
-            })
-      
-      - name: Run linting
-        run: |
-          echo "Running code quality checks..."
-          sleep 3
-          
-      - name: Update status to success
-        uses: actions/github-script@v6
-        with:
-          script: |
-            github.rest.repos.createCommitStatus({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              sha: context.sha,
-              state: 'success',
-              context: 'Code Quality',
-              description: 'Code quality checks passed'
-            })
-
-  # Безпековий статус-чек
-  security-check:
-    name: Security Scan
-    runs-on: ubuntu-latest
-    steps:
-      - name: Create pending status
-        uses: actions/github-script@v6
-        with:
-          script: |
-            github.rest.repos.createCommitStatus({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              sha: context.sha,
-              state: 'pending',
-              context: 'Security Scan',
-              description: 'Running security analysis...'
-            })
-      
-      - name: Run security scan
-        run: |
-          echo "Running security analysis..."
-          sleep 4
-          
-      - name: Update status to success
-        uses: actions/github-script@v6
-        with:
-          script: |
-            github.rest.repos.createCommitStatus({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              sha: context.sha,
-              state: 'success',
-              context: 'Security Scan',
-              description: 'Security scan completed'
-            })
+          languages: python
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
+EOF
