--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "type-check": "tsc --noEmit"
+	"ai:review": "npx @coderabbitai/ai-pr-reviewer",
+    "ai:security": "npx semgrep --config=auto",
+    "ai:testgen": "npx @codiumai/testgen"
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.0",
@@ -44,8 +47,9 @@
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.1",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-sonarjs": "^3.0.5",
     "typescript": "^5.3.3"
   },
   "browserslist": {
